--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-redux-timesheet-lab-03",
+  "name": "portfolio",
   "version": "1.0.0",
   "private": true,
   "proxy": "http://localhost:3001",
@@ -20,7 +20,8 @@
     "redux": "4.0.1",
     "redux-devtools-extension": "^2.13.7",
     "redux-thunk": "2.3.0",
-    "semantic-ui-react": "^0.87.3"
+    "semantic-ui-react": "^0.87.3",
+    "serve": "^11.1.0"
   },
   "devDependencies": {
     "enzyme": "3.8.0",
