--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "react-redux-timesheet-lab-03",
   "version": "1.0.0",
   "private": true,
   "proxy": "http://localhost:3001",
@@ -21,6 +21,7 @@
     "redux-devtools-extension": "^2.13.7",
     "redux-thunk": "2.3.0",
     "semantic-ui-react": "^0.87.3",
+	"react-scripts": "2.1.2",
     "serve": "^11.1.0"
   },
   "devDependencies": {
@@ -28,7 +29,6 @@
     "enzyme-adapter-react-16": "1.7.1",
     "jest-enzyme": "7.0.1",
     "moxios": "0.4.x",
-    "react-scripts": "2.1.2",
     "react-test-renderer": "16.7.0",
     "redux-mock-store": "^1.5.3"
   },
